--- a/package.json
+++ b/package.json
@@ -10,28 +10,30 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@radix-ui/react-accordion": "^1.2.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.501.0",
-    "next": "15.3.1",
+    "next": "14.1.0",
     "next-fonts": "^1.5.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "shadcn-ui": "^0.9.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
